# cactus

./: .gitignore  README.md  main.py  setup
.github/workflows/: publish.yml  publish_hf.yml  publish_to_hf.yml  release.yml
android/: CMakeLists.txt  Cactus.android.kt  Cactus.common.kt  Cactus.ios.kt  Cactus.kt  README.md  build.sh  cactus_jni.cpp
apple/: Cactus.swift  CmakeLists.txt  README.md  build.sh
cactus/: CMakeLists.txt  cactus.h
cactus/engine/: engine.h  engine_bpe.cpp  engine_cache.cpp  engine_index.cpp  engine_model.cpp  engine_signals.cpp
cactus/ffi/: cactus_cloud.cpp  cactus_cloud.h  cactus_complete.cpp  cactus_ffi.h  cactus_index.cpp  cactus_init.cpp  cactus_stream.cpp  cactus_stream_transcribe.cpp  cactus_telemetry.cpp  cactus_telemetry.h  cactus_telemetry_bridge.cpp  cactus_transcribe.cpp  cactus_utils.h  cactus_vad.cpp
cactus/graph/: graph.h  graph_builder.cpp  graph_core.cpp  graph_execute.cpp  graph_file.cpp  graph_io.cpp  graph_ops.cpp  graph_ops_math.cpp  graph_ops_nn.cpp  graph_ops_tensor.cpp
cactus/index/: index.cpp  index.h
cactus/kernel/: kernel.h  kernel_attention.cpp  kernel_conv.cpp  kernel_gemm.cpp  kernel_lstm.cpp  kernel_matmul.cpp  kernel_nn.cpp  kernel_reduce.cpp  kernel_utils.h
cactus/models/: model.h  model_gemma.cpp  model_lfm2moe.cpp  model_lfm2vl.cpp  model_moonshine.cpp  model_silero_vad.cpp  model_whisper.cpp
cactus/npu/: npu_ane.mm
cactus/telemetry/: telemetry.cpp  telemetry.h
cli/: cactus  embed.cpp
docs/: cactus_engine.md  cactus_index.md  cactus_python.md
flutter/: cactus.dart
libs/audio/: wav.h
native-tests/: README.MD
native-tests/android/: .gitignore  build.gradle  run.sh  settings.gradle
native-tests/android/app/: build.gradle
native-tests/android/app/src/main/: AndroidManifest.xml
native-tests/android/app/src/main/java/com/cactus/nativetest/: MainActivity.kt  TestRunner.kt
native-tests/android/app/src/main/res/layout/: activity_main.xml
native-tests/flutter/: .gitignore  README.md  patch_cactus_dart.rb  pubspec.yaml  run.sh
native-tests/flutter/android/app/: build.gradle.kts
native-tests/flutter/android/app/src/main/: AndroidManifest.xml
native-tests/flutter/android/app/src/main/kotlin/com/cactus/cactus_flutter_test/: MainActivity.kt
native-tests/flutter/ios/: configure_xcode.rb
native-tests/flutter/ios/Runner/: Info.plist
native-tests/flutter/ios/Runner.xcodeproj/: project.pbxproj
native-tests/flutter/lib/: cactus.dart  main.dart
native-tests/flutter/linux/: CMakeLists.txt
native-tests/flutter/linux/runner/: my_application.cc
native-tests/flutter/macos/Runner.xcodeproj/: project.pbxproj
native-tests/flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
native-tests/flutter/macos/Runner/Configs/: AppInfo.xcconfig
native-tests/flutter/test/: widget_test.dart
native-tests/flutter/web/: index.html  manifest.json
native-tests/flutter/windows/: CMakeLists.txt
native-tests/flutter/windows/runner/: Runner.rc  main.cpp
native-tests/ios/: .gitignore  configure_xcode.rb  run.sh
native-tests/ios/CactusSwiftTest/CactusSwiftTest/: CactusSwiftTestApp.swift  ContentView.swift  TestRunner.swift
native-tests/ios/CactusSwiftTest/CactusSwiftTest.xcodeproj/: project.pbxproj
native-tests/ios/CactusSwiftTest/CactusSwiftTest.xcodeproj/project.xcworkspace/xcuserdata/justinl.xcuserdatad/: UserInterfaceState.xcuserstate
native-tests/ios/CactusSwiftTest/CactusSwiftTest.xcodeproj/xcuserdata/justinl.xcuserdatad/xcschemes/: xcschememanagement.plist
python/: README.md  converter_silero_vad.py  example.py  example_tools.py  pyproject.toml  requirements.txt
python/src/: __init__.py  cactus.py  cli.py  config_manager.py  config_utils.py  converter.py  converter_llm.py  converter_silero_vad.py  publish_to_hf.py  tensor_io.py  tokenizer.py  weight_patterns.py
python/tools/: README.md  example_tools.py  test_tools.py  tools_server.py
tests/: CMakeLists.txt  asr.cpp  chat.cpp  run.sh  test_curl.cpp  test_engine.cpp  test_gemv_quant.cpp  test_graph.cpp  test_index.cpp  test_kernel.cpp  test_kv_cache.cpp  test_matmul_bench.cpp  test_performance.cpp  test_threading.cpp  test_utils.cpp  test_utils.h
tests/android/: CMakeLists.txt  run.sh
tests/bench/: README.md  backend_cactus_int4.cpp  backend_cactus_int8.cpp  backend_executorch.cpp  backend_ggml.cpp  backend_ggml_int8.cpp  backend_litert_int4.cpp  backend_litert_int8.cpp  backend_mlc.cpp  backend_mlx.cpp  backend_onnxrt.cpp  bench_common.cpp  bench_common.h  bench_driver.cpp  bench_driver.h  gemma_bench.py
tests/ios/: .gitignore  configure_xcode.rb  run.sh  setup_project.rb
tests/ios/CactusTest/CactusTest/: AppDelegate.mm
tools/: convert_hf.py  example.py
tools/src/: cactus_ffi.py  cli.py  tensor_io.py
