[project]
name = "cactus"
version = "0.1.0"
description = "Cactus Python tools"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "numpy",
    "huggingface-hub",
]

[project.optional-dependencies]
vlm = ["Pillow", "num2words", "torchvision"]
lora = ["peft"]

[project.scripts]
cactus = "src.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
